Fix the navbar items not showing on mobile

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -46,7 +46,7 @@
 }
 
 @media screen and (max-width: 840px){
-    ul {
+    .items {
         display: none;
     }
 
